# qlcplus

./: .build-ci.sh  .clang-format  .clang-format-js  .coveralls.yml  .gitignore  .gitmodules  .indent.pro  .travis-ci.sh  .travis-prepare.sh  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README  README.md  SUPPORT.md  TODO  appveyor.yml  build_fix.py  check-licenses.sh  coverage.cmake  coverage.pri  coverage.sh  coverage_cmake.sh  cpp.hint  create-appimage-cmake.sh  create-appimage.sh  create-deb.sh  create-dmg-cmake.sh  create-dmg.sh  create-exe.sh  create-rpm.sh  debug_init.sh  indentation.sh  qlc.pro  qmake2cmake.md  translate.sh  unittest.bat  unittest.sh  (+4 more)
engine/: CMakeLists.txt  engine.pro  qlcconfig.h.in
engine/audio/: CMakeLists.txt  audio.pro
engine/src/: CMakeLists.txt  audio.cpp  audio.h  avolitesd4parser.cpp  avolitesd4parser.h  bus.cpp  bus.h  channelmodifier.cpp  channelmodifier.h  channelsgroup.cpp  channelsgroup.h  chaser.cpp  chaser.h  chaseraction.h  chaserrunner.cpp  chaserrunner.h  chaserstep.cpp  chaserstep.h  collection.cpp  collection.h  cue.cpp  cue.h  cuelistrunner.cpp  cuelistrunner.h  cuestack.cpp  cuestack.h  dmxdumpfactoryproperties.cpp  dmxdumpfactoryproperties.h  dmxsource.h  dmxsubmaster.cpp  dmxsubmaster.h  doc.cpp  doc.h  efx.cpp  efx.h  efxfixture.cpp  efxfixture.h  efxuistate.cpp  efxuistate.h  fadechannel.cpp  (+149 more)
engine/test/: CMakeLists.txt  test.pro
fixtureeditor/: CMakeLists.txt  actsonchanneldialog.cpp  actsonchanneldialog.h  actsonchanneldialog.ui  addchannelsdialog.cpp  addchannelsdialog.h  addchannelsdialog.ui  app.cpp  app.h  capabilitywizard.cpp  capabilitywizard.h  capabilitywizard.ui  editcapability.cpp  editcapability.h  editcapability.ui  editchannel.cpp  editchannel.h  editchannel.ui  edithead.cpp  edithead.h  edithead.ui  editmode.cpp  editmode.h  editmode.ui  editphysical.cpp  editphysical.h  editphysical.ui  fixtureeditor.cpp  fixtureeditor.h  fixtureeditor.pro  fixtureeditor.rc  fixtureeditor.ui  fixtureeditor_ca_ES.ts  fixtureeditor_cz_CZ.ts  fixtureeditor_de_DE.ts  fixtureeditor_es_ES.ts  fixtureeditor_fi_FI.ts  fixtureeditor_fr_FR.ts  fixtureeditor_it_IT.ts  fixtureeditor_ja_JP.ts  (+6 more)
fixtureeditor/ADJ/: ADJ-5P-Hex.qxf
hotplugmonitor/: CMakeLists.txt  hotplugmonitor.pri  hotplugmonitor.pro
hotplugmonitor/src/: CMakeLists.txt  hotplugmonitor.cpp  hotplugmonitor.h  hpmprivate-iokit.cpp  hpmprivate-iokit.h  hpmprivate-udev.cpp  hpmprivate-udev.h  hpmprivate-win32.cpp  hpmprivate-win32.h  src.pro
hotplugmonitor/test/: CMakeLists.txt  hpmtest.cpp  hpmtest.h  main.cpp  test.pro  test.sh
launcher/: CMakeLists.txt  launcher.cpp  launcher.h  launcher.pro  launcher.qrc  launcher_ca_ES.ts  launcher_cz_CZ.ts  launcher_de_DE.ts  launcher_es_ES.ts  launcher_fi_FI.ts  launcher_fr_FR.ts  launcher_it_IT.ts  launcher_ja_JP.ts  launcher_nl_NL.ts  launcher_pt_BR.ts  launcher_zh_CN.ts  main.cpp
main/: .qmake.stash  CMakeLists.txt  main.cpp  main.pro  main.rc
plugins/: CMakeLists.txt  plugins.pro  plugins.pro~
plugins/E1.31/: CMakeLists.txt  E1.31.pro  E131_ca_ES.ts  E131_cz_CZ.ts  E131_de_DE.ts  E131_es_ES.ts  E131_fi_FI.ts  E131_fr_FR.ts  E131_it_IT.ts  E131_ja_JP.ts  E131_nl_NL.ts  E131_pt_BR.ts  E131_zh_CN.ts  configuree131.cpp  configuree131.h  configuree131.ui  e131controller.cpp  e131controller.h  e131packetizer.cpp  e131packetizer.h  e131plugin.cpp  e131plugin.h  org.qlcplus.QLCPlus.e131.metainfo.xml  qlcplus-e131.metainfo.xml
plugins/artnet/: ArtNet_ca_ES.ts  ArtNet_cz_CZ.ts  ArtNet_de_DE.ts  ArtNet_es_ES.ts  ArtNet_fi_FI.ts  ArtNet_fr_FR.ts  ArtNet_it_IT.ts  ArtNet_ja_JP.ts  ArtNet_nl_NL.ts  ArtNet_pt_BR.ts  ArtNet_zh_CN.ts  CMakeLists.txt  artnet.json  artnet.pro  artnetcontroller.cpp  artnetcontroller.h  artnetnode.cpp  artnetnode.h  artnetpacketizer.cpp  artnetpacketizer.h  artnetplugin.cpp  artnetplugin.h  configureartnet.cpp  configureartnet.h  configureartnet.ui
plugins/dmx4linux/: CMakeLists.txt  DMX4Linux_ca_ES.ts  DMX4Linux_cz_CZ.ts  DMX4Linux_de_DE.ts  DMX4Linux_es_ES.ts  DMX4Linux_fi_FI.ts  DMX4Linux_fr_FR.ts  DMX4Linux_it_IT.ts  DMX4Linux_ja_JP.ts  DMX4Linux_nl_NL.ts  DMX4Linux_pt_BR.ts  DMX4Linux_zh_CN.ts  dmx4linux.cpp  dmx4linux.h  dmx4linux.json  dmx4linux.pro  org.qlcplus.QLCPlus.dmx4linux.metainfo.xml  qlcplus-dmx4linux.metainfo.xml
plugins/dmxusb/: CMakeLists.txt
plugins/dummy/: CMakeLists.txt  Dummy_ca_ES.ts  Dummy_cz_CZ.ts  Dummy_de_DE.ts  Dummy_es_ES.ts  Dummy_fi_FI.ts  Dummy_fr_FR.ts  Dummy_it_IT.ts  Dummy_ja_JP.ts  Dummy_nl_NL.ts  Dummy_pt_BR.ts  dummy.pro  dummyconfiguration.cpp  dummyconfiguration.h  dummyconfiguration.ui  dummyplugin.cpp  dummyplugin.h
plugins/enttecwing/: CMakeLists.txt
plugins/gpio/: CMakeLists.txt  GPIO_ca_ES.ts  GPIO_cz_CZ.ts  GPIO_de_DE.ts  GPIO_es_ES.ts  GPIO_fi_FI.ts  GPIO_fr_FR.ts  GPIO_it_IT.ts  (+11 more)
qmlui/: CMakeLists.txt  actionmanager.cpp  actionmanager.h  app.cpp  app.h  audioeditor.cpp  audioeditor.h  chasereditor.cpp  chasereditor.h  collectioneditor.cpp  collectioneditor.h  colorfilters.cpp  colorfilters.h  contextmanager.cpp  contextmanager.h  efxeditor.cpp  efxeditor.h  fixturebrowser.cpp  fixturebrowser.h  fixturegroupeditor.cpp  fixturegroupeditor.h  fixturemanager.cpp  fixturemanager.h  fixtureremapmanager.cpp  fixtureremapmanager.h  fixtureutils.cpp  fixtureutils.h  folderbrowser.cpp  folderbrowser.h  functioneditor.cpp  functioneditor.h  functionmanager.cpp  functionmanager.h  importmanager.cpp  importmanager.h  inputoutputmanager.cpp  inputoutputmanager.h  inputoutputobject.h  inputprofileeditor.cpp  inputprofileeditor.h  (+57 more)
resources/: CMakeLists.txt  resources.pro  straightline.js
ui/: CMakeLists.txt
webaccess/: CMakeLists.txt  Test_Web_API.html  commonjscss.h  mongoose.c  mongoose.h  webaccess.cpp  webaccess.h  webaccess.pro  webaccess_ca_ES.ts  webaccess_cz_CZ.ts  webaccess_de_DE.ts  webaccess_es_ES.ts  webaccess_fi_FI.ts  webaccess_fr_FR.ts  webaccess_it_IT.ts  webaccess_nl_NL.ts  webaccess_pt_BR.ts  webaccess_pt_PT.ts  webaccessconfiguration.cpp  webaccessnetwork.cpp  webaccesssimpledesk.cpp  webaccesssimpledesk.h
(+6170 files in other folders)
